istio/code-server/kube/default-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.istio.example.web'
    port:
      name: http
      number: 80
      protocol: HTTP
