istio/code-server/kube/code-server.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: code-server
spec:
  gateways:
  - default-gateway.istio-system.svc.cluster.local
  hosts:
  - code-server.example.web
  http:
  - match:
    - uri:
         prefix: /
    route:
    - destination:
        host: code-server
        port:
          number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
spec:
 ports:
 - port: 80
   targetPort: 8443
 selector:
   app: code-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
    version: v3.8.0
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: ghcr.io/linuxserver/code-server:version-v3.8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
